SET(PROJ_NAME surfit)
PROJECT(${PROJ_NAME})
SET(MODULE_NAME ${PROJ_NAME})
SET(INTERFACE_FILES src/surfit.i)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ../sstuff/src ../sstuff/src/ptypes  ../surfit/src ${CMAKE_BINARY_DIR})

SET(CMAKE_SWIG_FLAGS "-c++")

FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/pysurfit/src)

add_definitions(-DSWIG_PYTHON_INTERPRETER_NO_DEBUG)

SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILES} PROPERTIES CMAKE_SWIG_FLAGS "-includeall")

SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/pysurfit/)

SWIG_ADD_MODULE(${MODULE_NAME} python ${INTERFACE_FILES})
SWIG_LINK_LIBRARIES(${MODULE_NAME} ${PYTHON_LIBRARIES} libsstuff libsurfit)

#
# Install section
#

#install(TARGETS ${PROJ_NAME} DESTINATION lib)
